--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,4 @@
-# Es una buena practica no añadir directamente en el codigo los datos sensibles de la base de datos
-# Agrega aqui, los datos donde vas a alojar la base de datos
+# Datos de acceso a DB
 DB_URL=jdbc:mysql://localhost:3306/biblioteca
-DB_USER=test
-DB_PASSWORD=Jpgrt46y
+DB_USER=Usuario
+DB_PASSWORD=Pass
